# Miner

./: CMakeLists.txt  README.md
examples/: test1.cpp
source/: MTimer.h  MUnknown.h  Miner.cpp  Miner.h  MinerDevice.h  minerTypes.h
source/core/: dimension2d.h  position2d.h
source/gui/: MCursorControl.h
source/io/: MFileSystem.h
source/video/: EDriverType.h  MVideoDriver.h
